--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,7 @@ section {
   height: 100vh;
   width: 100vw;
   display: flex;
+  justify-content: center;
   background: radial-gradient(88.52% 90.62% at 51.49% 90.62%, rgba(252, 216, 28, 0.05) 18.29%, rgba(123, 106, 14, 0.05) 36.52%, rgba(16, 14, 2, 0.05) 92.42%), rgba(16,14,2,0.3);
 }
 
@@ -45,7 +46,35 @@ section {
 .lightbulb-box img {
   transform: rotate(180deg);
   max-height: 16vh;
+  filter: drop-shadow(0px 1px 15px #FCD81C) drop-shadow(0px 6px 1px #FD3434);
 }
+
+.logo-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
+.logo-image-box img {
+  max-height: 15vh;
+  transform: matrix(-1, 0, 0, 1, 0, 0);
+  filter: drop-shadow(1px 1px 25px #FCD81C);
+  /*backdrop-filter: blur(2px);*/
+  order: 0;
+  flex-grow: 0;
+  margin: -1em -2.5em;
+}
+
+.logo-title-box {
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.highlight-container {
+  z-index: -1;
+}
+
 
 #hero-section {
   height: calc(100vh - var(--header-margin) - 2em);
