--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@
 }
 
 .circuit-line:hover,
+.circuit-line-vertical:hover,
 .stepper-btn:hover,
 .logo:hover {
   filter: drop-shadow(0 0 1rem var(--color-primary));
@@ -165,7 +166,18 @@ section {
   border-radius: 16px;
 }
 
-.circuit-line-square {
+.circuit-line-vertical {
+  position: relative;
+  margin-top: -4px;
+  margin-bottom: -4px;
+  width: 4px;
+  border: 1px solid var(--color-primary);
+  border-top: none;
+  border-bottom: none;
+  border-radius: 16px;
+}
+
+.circuit-line-losange {
   display: flex;
   align-items: center;
   margin: auto;
@@ -177,12 +189,12 @@ section {
   border-radius: 1rem;
 }
 
-.circuit-line-square-container::before {
+.circuit-line-losange-container::before {
   z-index: 4;
   background: var(--bg-yellow-radial) !important;
 }
 
-.circuit-line-square-container {
+.circuit-line-losange-container {
   z-index: 5;
   position: relative;
   display: flex;
@@ -194,35 +206,50 @@ section {
   outline: 4px solid var(--color-primary);
 }
 
-.circuit-line-square-out::before {
+.circuit-line-losange-out::before {
   z-index: 6;
   background: var(--yellow-grad);
 }
-.circuit-line-square-out {
+.circuit-line-losange-out {
   z-index: 7;
   background: var(--bg-yellow-radial) !important;
   border: solid 4px transparent;
 }
-.circuit-line-square-center::before {
+.circuit-line-losange-center::before {
   z-index: 8;
   /*background: var(--bg-yellow-radial);*/
   background: var(--bg-yellow-radial-highlighted) !important;
 }
-.circuit-line-square-center {
+.circuit-line-losange-center {
   z-index: 9;
   /*background: var(--color-primary) !important;*/
   padding: 4px;
   /*border: solid 4px transparent;*/
   background: var(--yellow-grad);
 }
-.circuit-line-square-in::before {
+.circuit-line-losange-in::before {
   z-index: 10;
   background: var(--bg-yellow-radial-highlighted) !important;
 }
-.circuit-line-square-in {
+.circuit-line-losange-in {
   z-index: 11;
   background: var(--yellow-grad);
 }
+
+.circuit-line-rectangle-container::before {
+  z-index: 4;
+  background: var(--bg-yellow-radial) !important;
+}
+
+.circuit-line-rectangle-container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+}
+
 
 .pseudo-element-gradient:before {
   content: "";
@@ -267,6 +294,7 @@ section {
   padding-bottom: 20vh;
 }
 
+
 .about-picture-box {
   overflow: hidden;
   height: 25vh;
@@ -282,8 +310,8 @@ section {
   position: relative;
   z-index: 49;
   transform: rotate(-45deg);
-  height: 280px;
-  width: 280px;
+  height: 30vh;
+  width: 30vh;
 }
 
 .about-picture-box-highlight {
@@ -321,7 +349,7 @@ section {
 
 }
 
-.about-picture-box-highlight-square {
+.about-picture-box-highlight-losange {
   border: 4px solid;
   border-radius: 1rem;
   top: 0;
@@ -339,6 +367,7 @@ section {
   height: 33vh;
   z-index: 54;
 }
+
 
 .text-container {
   /* DescriptionBox */
@@ -441,10 +470,34 @@ section {
   border: transparent 1px solid;
   border-radius: 16px;
   margin: 1rem;
+  margin-right: 3rem;
+}
+
+.work-slider-stepper {
+
+}
+
+.work-slider-stepper .MuiStepLabel-labelContainer {
+  text-align: center;
+}
+
+.work-slider-stepper .MuiStepConnector-vertical {
+  margin-left: 0;
+  margin-right: 12px;
+}
+
+.work-slider-stepper .MuiStepLabel-iconContainer {
+  padding-left: 8px;
+  padding-right: 0;
+}
+
+.work-slider-stepper .MuiStepConnector-lineVertical {
+  border-left: 0;
+  border-right: 1px solid;
 }
 
 .work-brand-logo-container img {
-  max-height: 5rem;
+  max-height: 4em;
 }
 
 .work-text-container {
