--- a/src/App.css
+++ b/src/App.css
@@ -280,6 +280,23 @@ section {
   justify-content: space-between;
 }
 
+.call-to-action-btn {
+  position: relative;
+  z-index: 9999;
+  background: linear-gradient(45deg,  var(--color-secondary) 30%,var(--color-primary) 90%);
+  /*border: '2-px-solid-var(--color-primary)',*/
+  color: white !important; /*//#fcd-81-c,*/
+  height: 48px;
+  width: 360px;
+  padding: 0 30px;
+  box-shadow: 0 2px 4px 2px var(--bg-color-default);
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid var(--color-secondary);
+  border-radius: 50px;
+}
+
 /** ABOUT SECTION **/
 
 #about-section {
@@ -485,8 +502,18 @@ section {
   object-fit: cover;
 }
 
+.work-slider-background {
+  position:  absolute;
+  width:  100%;
+  height: 100%;
+  border:  4px solid transparent;
+  background: url("src/assets/planet-581239_1280.jpg");
+}
+
 .slider-image {
   margin-left: -160px;
+  position: relative;
+  z-index: 9999;
 }
 
 .work-brand-logo-container {
