--- a/src/App.css
+++ b/src/App.css
@@ -83,6 +83,15 @@ section {
   justify-content: center;
 }
 
+.logo-image-box {
+  border-radius: 50%;
+  border: 1px solid var(--color-primary);
+  overflow: hidden;
+  width: 64px;
+  height: 64px;
+  filter: drop-shadow(0 -6px 16px var(--color-primary));
+}
+
 .logo-image-box img {
   max-height: 15vh;
   transform: matrix(-1, 0, 0, 1, 0, 0);
@@ -105,7 +114,7 @@ section {
 
 
 .text-outline-yellow {
-  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: var(--color-primary);
 }
 .text-outline-dark {
@@ -131,6 +140,40 @@ section {
 }
 
 /** BACKGROUND DESIGN **/
+
+.highlight-geometry-smoke {
+  /*background-image: radial-gradient(white 0%, gray 100%);*/
+  background-image: url('src/assets/pexels-tetyana-kovyrina-937980-removebg-preview.png');
+  position: absolute;
+  height: 300px;
+  width: 500px;
+  border-radius: 50%;
+  animation: move 4s ease-in-out infinite;
+  transform-origin: center center;
+}
+
+/*@keyframes move {
+  0% {
+    transform: scale(1) translateX(200px) translateY(100px) rotate(0deg);
+    opacity: 0;
+  }
+  25% {
+    transform: scale(1.1) translateX(-1500px) translateY(500px) rotate(45deg);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1) translateX(-100px) translateY(0px) rotate(90deg);
+    opacity: 0.5;
+  }
+  75% {
+    transform: scale(0.9) translateX(-50px) translateY(-50px) rotate(135deg);
+    opacity: 0.8;
+  }
+  100% {
+    transform: scale(1) translateX(1000px) translateY(-100px) rotate(180deg);
+    opacity: 0;
+  }
+}*/
 
 .bg-design-container-center{
   position: absolute;
@@ -182,10 +225,10 @@ section {
   align-items: center;
   margin: auto;
   position: relative;
-  padding: 42px;
+  /*padding: 42px;*/
   box-sizing: border-box;
   background-clip: padding-box;
-  border: solid 24px transparent;
+  /*border: solid 24px transparent;*/
   border-radius: 1rem;
 }
 
@@ -295,6 +338,8 @@ section {
   align-items: center;
   border: 2px solid var(--color-secondary);
   border-radius: 50px;
+
+  opacity: 0;
 }
 
 /** ABOUT SECTION **/
@@ -423,11 +468,11 @@ section {
 /** WORK SECTION **/
 
 #work-section {
-  height: 400vh;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   margin-top: -15vh;
+  padding-top: 0;
 }
 
 .work-container {
@@ -437,7 +482,7 @@ section {
   justify-content: space-between;
   align-items: center;
   padding-bottom: 5vh;
-  min-height: 100vh;
+  min-height: 115vh;
 }
 
 #frizFactory {
@@ -593,6 +638,7 @@ section {
 }
 
 .paper-circle {
+  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
