--- a/src/App.css
+++ b/src/App.css
@@ -311,7 +311,7 @@ section {
 #hero-section {
   padding-top: 0;
   background: var(--bg-yellow-radial2);
-  height: calc(110vh - var(--header-margin) - 2em);
+  height: calc(110vh - var(--header-margin) ); /*- 2em*/
   margin-top: -10vh;
   flex-direction: column;
   justify-content: center;
@@ -325,8 +325,9 @@ section {
 
 .call-to-action-btn {
   position: relative;
-  z-index: 9999;
-  background: linear-gradient(45deg,  var(--color-secondary) 30%,var(--color-primary) 90%);
+  z-index: 99999;
+  background: linear-gradient(45deg, var(--color-secondary),var(--color-primary) 60%,var(--color-secondary));
+  /*background: linear-gradient(45deg,  var(--red-carnelian) 30%, var(--color-secondary) 90%);*/
   /*border: '2-px-solid-var(--color-primary)',*/
   color: white !important; /*//#fcd-81-c,*/
   height: 48px;
@@ -336,10 +337,10 @@ section {
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  border: 2px solid var(--color-secondary);
+  border: 2px solid var(--red-carnelian);
   border-radius: 50px;
 
-  opacity: 0;
+  /*opacity: 0;*/
 }
 
 /** ABOUT SECTION **/
@@ -359,27 +360,29 @@ section {
 
 .about-picture-box {
   overflow: hidden;
-  height: 25vh;
-  width: 25vh;
+  height: 33vh;
+  width: 33vh;
   border: 2px solid var(--color-primary);
   border-radius: 1rem;
   z-index: 50;
-  transform: rotate(45deg);
+  border-radius: 50%;
+  /*transform: rotate(45deg);*/
   background: var(--bg-yellow-radial-highlighted);
 }
 
 .about-picture-box img {
   position: relative;
   z-index: 49;
-  transform: rotate(-45deg);
-  height: 30vh;
-  width: 30vh;
+  /*transform: rotate(-45deg);*/
+  height: 39vh;
+  width: 39vh;
+  left: -3vh;
 }
 
 .about-picture-box-highlight {
   z-index: 47;
   border: 4px solid;
-  border-radius: 1rem;
+  border-radius: 50%;
   position: absolute;
   top: 0;
   left: 0;
@@ -397,10 +400,10 @@ section {
 }
 
 .about-picture-box-highlight-circle2 {
-  width: 400px;
+  /*width: 400px;
   height: 400px;
   left: 10%;
-  top: 10%;
+  top: 10%;*/
   /*transform: rotate(-90deg);*/
   border-radius: 50%;
   /* LightRadial */
@@ -413,7 +416,7 @@ section {
 
 .about-picture-box-highlight-losange {
   border: 4px solid;
-  border-radius: 1rem;
+  border-radius: 50%;
   top: 0;
   left: 0;
   height: 100%;
@@ -670,13 +673,35 @@ section {
 
 .contact-paper {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   height: 45vh;
   width: 45vh;
-
+  z-index: 99;
 }
 
 .contact-typography {
   font-family: 'Beth Ellen';
+}
+
+.contact-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  border: 2px solid transparent;
+  padding: 4px;
+}
+
+.contact-mobile-nav, .contact-mobile-footer {
+  width: 100%;
+  height: 2rem;
+  /*background-color: var(--color-primary);
+  border-radius: 6px;*/
+  /*border-bottom: 1px solid var(--color-primary);*/
+}
+
+.contact-mobile-body {
+  padding: 2px 24px;
+  border: 1px solid var(--color-primary);
 }
