--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,9 @@ section {
   height: 100vh;
   width: 100vw;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
   background: var(--bg-yellow-radial);
   padding-top: 15vh;
 }
@@ -257,6 +259,9 @@ section {
   z-index: 7;
   background: var(--bg-yellow-radial) !important;
   border: solid 4px transparent;
+
+
+
 }
 .circuit-line-losange-center::before {
   z-index: 8;
@@ -705,3 +710,13 @@ section {
   padding: 2px 24px;
   border: 1px solid var(--color-primary);
 }
+
+/*
+@media (max-width: 1023px) { !*and (orientation: portrait) *!
+  .circuit-line-losange-out {
+    width: 33vh;
+    height: 33vh;
+
+
+  }
+}*/
