--- a/src/App.css
+++ b/src/App.css
@@ -711,12 +711,44 @@ section {
   border: 1px solid var(--color-primary);
 }
 
-/*
-@media (max-width: 1023px) { !*and (orientation: portrait) *!
+.about-background-losange {
+  transform: scale(1) rotate(45deg);
+}
+
+/*.about-perspective {
+  perspective: 1000px;
+}
+
+.about-background-losange {
+  transform-style: preserve-3d;
+  transform: scale(1) rotate(45deg) translateZ(-60px); !*translateZ(-60px) rotateY(20deg) rotateX(20deg)*!
+}
+
+.about-container {
+  transform-style: preserve-3d;
+  transform: translateZ(100px);
+}
+.about-picture-box {
+  transform-style: preserve-3d;
+  transform: translateZ(60px);
+}
+.about-text-container {
+  transform-style: preserve-3d;
+  transform: translateZ(60px);
+}
+.about-text {
+  transform-style: preserve-3d;
+  transform: translateZ(20px);
+}*/
+
+
+@media (max-width: 1023px) { /*and (orientation: portrait) */
   .circuit-line-losange-out {
-    width: 33vh;
-    height: 33vh;
 
 
   }
-}*/
+
+  .about-background-losange {
+    transform: scale(0.6) rotate(45deg);
+  }
+}
