--- a/src/App.css
+++ b/src/App.css
@@ -363,6 +363,7 @@ section {
   display: flex;
   justify-content: space-around;
   align-items: baseline;
+  max-width: 100vw;
   /*padding-bottom: 20vh;*/
 }
 
@@ -438,8 +439,8 @@ section {
 .about-text-container {
   display: inline-flex;
   justify-content: center;
-  width: 33vh;
-  height: 33vh;
+  width: 20vw;
+  height: 60vh;
   z-index: 54;
 }
 
