--- a/src/components/common/smartphonemockup/SmartphoneMockup.css
+++ b/src/components/common/smartphonemockup/SmartphoneMockup.css
@@ -1,7 +1,7 @@
 .smartphone {
-    width: 300px;
-    height: 650px;  /* Adjusted for the bottom bar */
-    border-radius: 36px;
+    width: 306px;
+    height: 648px;  /* Adjusted for the bottom bar */
+    /*border-radius: 36px;*/
     position: relative;
     overflow: hidden;
     box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
@@ -10,26 +10,41 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    /*border-radius: 1em;*/
 }
 
 .smartphone-notch {
-    width: 16px;
+    width: 100px;
     height: 16px;
-    border-radius: 50%;
-    background-color: grey;
-    position: absolute;
-    top: 6px;
-    left: 50%;
-    transform: translateX(-50%);
+    border-radius: 8px;
+    background-color: rgba(24, 22, 12, 0.9);
     overflow: hidden;
+    border: 1px solid black;
+    justify-self: center;
+}
+
+.smartphone-ui-status {
+    display: flex;
+    align-items: baseline;
+    justify-content: center;
 }
 
 
 .smartphone-ui-top-bar, .smartphone-ui-bottom-bar {
     width: 100%;
     height: 26px;
-    background-color: #000;
+    background-color: rgb(10, 9, 6);
     position: relative;
+}
+
+.smartphone-ui-top-bar {
+    display: grid;
+    grid-template-columns: 1.5fr 3fr 1.5fr;
+    grid-template-rows: 1fr;
+    gap: 0px 0px;
+    grid-template-areas:
+    ". . .";
+    align-items: center;
 }
 
 .smartphone-screen {
@@ -39,13 +54,19 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    border: 1px solid black;
+    border: 4px solid rgba(21, 20, 15, 0.9);
+    border-radius: 6px;
+    overflow: hidden;
+}
+
+.smartphone-navbar {
+    padding-top: 46px;
 }
 
 .smartphone-navbar, .smartphone-footer {
     width: 100%;
-    height: 50px;
-    background-color: #333;
+    height: 40px;
+    /*background-color: rgba(252, 216, 28, 0.9);*/ /*#333*/
     color: white;
     display: flex;
     justify-content: center;
@@ -72,8 +93,11 @@
 }
 
 .smartphone-ui-button {
-    width: 6px;
-    height: 6px;
-    background-color: #999;
+    width: 16px;
+    height: 16px;
+    /*color: #999;*/
 }
 
+.smartphone-contact-button {
+    background-color: var(--color-secondary)
+}
