--- a/src/components/common/smartphonemockup/SmartphoneMockup.css
+++ b/src/components/common/smartphonemockup/SmartphoneMockup.css
@@ -60,12 +60,11 @@
 }
 
 .smartphone-navbar {
-    padding-top: 46px;
 }
 
 .smartphone-navbar, .smartphone-footer {
     width: 100%;
-    height: 40px;
+    height: 64px;
     /*background-color: rgba(252, 216, 28, 0.9);*/ /*#333*/
     color: white;
     display: flex;
@@ -81,7 +80,7 @@
     height: 100%;
     margin: 10px;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
 }
 
