--- a/src/App.css
+++ b/src/App.css
@@ -704,8 +704,8 @@ section {
 
 /* CONTACT SECTION */
 
-.contact-section {
-  padding: 15vh;
+#contact-section {
+  height: 120vh;
 }
 
 .contact-container {
