--- a/src/components/common/smartphonemockup/SmartphoneMockup.css
+++ b/src/components/common/smartphonemockup/SmartphoneMockup.css
@@ -1,6 +1,6 @@
 .smartphone {
     width: 306px;
-    height: 648px;  /* Adjusted for the bottom bar */
+    height: 648px; /* Adjusted for the bottom bar */
     /*border-radius: 36px;*/
     position: relative;
     overflow: hidden;
@@ -29,8 +29,8 @@
     justify-content: center;
 }
 
-
-.smartphone-ui-top-bar, .smartphone-ui-bottom-bar {
+.smartphone-ui-top-bar,
+.smartphone-ui-bottom-bar {
     width: 100%;
     height: 26px;
     background-color: rgb(10, 9, 6);
@@ -42,8 +42,7 @@
     grid-template-columns: 1.5fr 3fr 1.5fr;
     grid-template-rows: 1fr;
     gap: 0px 0px;
-    grid-template-areas:
-    ". . .";
+    grid-template-areas: '. . .';
     align-items: center;
 }
 
@@ -62,7 +61,8 @@
 .smartphone-navbar {
 }
 
-.smartphone-navbar, .smartphone-footer {
+.smartphone-navbar,
+.smartphone-footer {
     width: 100%;
     height: 60px;
     /*background-color: rgba(252, 216, 28, 0.9);*/ /*#333*/
@@ -98,5 +98,5 @@
 }
 
 .smartphone-contact-button {
-    background-color: var(--color-secondary)
+    background-color: var(--color-secondary);
 }
